--- a/pages/index.css
+++ b/pages/index.css
@@ -49,7 +49,6 @@ h1{
 a:hover{
   background-image: linear-gradient(to right, rgb(27, 65, 231) , rgb(226, 17, 17));
   border-radius: 15px;
-  padding: 5px;
 }
 
 .checkbox-container{
@@ -272,3 +271,240 @@ a:hover{
     background-color: rgb(255, 255, 255);
     display: flex;
 }
+
+.cardi-container {
+    width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cardi{
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    margin: 3rem 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4b87d6;
+    background-image: url('../src/assets/images/java.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: grayscale(0.5);
+    color: #ec4949;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+}
+
+.cardi-text{
+    width: 40%;
+    letter-spacing: 1px;
+    color: rgb(7, 0, 0);
+}
+
+.cardi-wrapper{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.cardi-wrapper::before {
+    content:'';
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    display: block;
+    border: 1px solid #ffffff;
+    opacity: 0;
+    transition: 0.5s ease-in-out;
+}
+
+.cardi-wrapper h2{
+    font-size: 40px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    margin: 0;
+    transform: 0.5s ease-in-out;
+}
+
+.cardi-wrapper p{
+    font-size: 0;
+    visibility: visible;
+    opacity: 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.5s ease-in-out;
+}
+
+.cardi:hover{
+    filter: unset;
+}
+
+.cardi:hover > .card-wrapper::before{
+    height: 200px;
+    width: 200px;
+    opacity: 1;
+}
+
+.cardi:hover > .card-wrapper p{
+    font-size: 14px;
+    visibility: visible;
+    opacity: 1;
+}
+
+
+.cody-container {
+    width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cody{
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    margin: 3rem 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4b87d6;
+    background-image: url('../src/assets/images/react.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: grayscale(0.5);
+    color: #ec4949;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+}
+
+.cody-text{
+    width: 40%;
+    letter-spacing: 1px;
+    color: rgb(7, 0, 0);
+}
+
+.cody-wrapper{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.cody-wrapper::before {
+    content:'';
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    display: block;
+    border: 1px solid #ffffff;
+    opacity: 0;
+    transition: 0.5s ease-in-out;
+}
+
+.cody-wrapper h2{
+    font-size: 40px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    margin: 0;
+    transform: 0.5s ease-in-out;
+}
+
+.cody-wrapper p{
+    font-size: 0;
+    visibility: visible;
+    opacity: 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.5s ease-in-out;
+}
+
+.cody:hover{
+    filter: unset;
+}
+
+.cody:hover > .card-wrapper::before{
+    height: 200px;
+    width: 200px;
+    opacity: 1;
+}
+
+.cody:hover > .card-wrapper p{
+    font-size: 14px;
+    visibility: visible;
+    opacity: 1;
+}
+
+.carin-container {
+    width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.carin{
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    margin: 3rem 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4b87d6;
+    background-image: url('../src/assets/images/MySQL.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: grayscale(0.5);
+    color: #ec4949;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+}
+
+.carin-text{
+    width: 40%;
+    letter-spacing: 1px;
+    color: rgb(7, 0, 0);
+}
+
+.carin-wrapper{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.carin-wrapper::before {
+    content:'';
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    display: block;
+    border: 1px solid #ffffff;
+    opacity: 0;
+    transition: 0.5s ease-in-out;
+}
+
+.carin-wrapper p{
+    font-size: 0;
+    visibility: visible;
+    opacity: 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.5s ease-in-out;
+}
+
+
